--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="toast_searching_the_server">Searching the server. Please wait</string>
     <string name="toast_create_username">Create your username for chatting</string>
     <string name="send_message_hint">Send message…</string>
+    <string name="toast_users_updated">Users updated!</string>
 </resources>
