--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="toast_create_username">Create your username for chatting</string>
     <string name="send_message_hint">Send message…</string>
     <string name="toast_users_updated">Users updated!</string>
+    <string name="sign_in">Sign in</string>
 </resources>
